# ailoop

./: .clippy.toml  .dockerignore  .gitignore  .pre-commit-config.yaml  .repomixignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_HEALTH_IMPROVEMENT_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README-Docker.md  README.md  docker-compose.yml  repomix-output.xml  repomix.config.json  response_test.json  rustfmt.toml  skill-project.toml  test-results.json  test-results.md
.githooks/: commit-msg  pre-commit  pre-push  validate-commit-type.sh
.github/workflows/: auto-release.yml  ci.yml  publish-npm.yml  publish-pypi.yml  release.yml
.newton.newton/: advisor.sh  evaluator.sh  executor.sh  goal.md  loop.sh
.newton.newton/state/: advisor_recommendations.md  evaluator_status.md  execution_output.md  test_output.json
.newton.newton/task/: web_command.md
.specify/memory/: constitution.md
ailoop-cli/: Cargo.toml
ailoop-cli/src/: lib.rs  main.rs  parser.rs
ailoop-cli/src/cli/: commands.rs  doctor.rs  forward.rs  handlers.rs  message_converter.rs  mod.rs  provider.rs  provider_handlers.rs  queue.rs  queue_handlers.rs  task.rs  task_handlers.rs  task_handlers_tests.rs  task_handlers_unwrap_fixes_test.rs  terminal_input.rs  workflow.rs  workflow_handlers.rs
ailoop-cli/src/mode/: detection.rs  mod.rs  operation_mode.rs
ailoop-cli/src/parser/: jsonl.rs  mod.rs  opencode.rs
ailoop-cli/src/transport/: file.rs  mod.rs  websocket.rs
ailoop-cli/tests/: cli_snapshot_tests.rs  cli_tests.rs  queue_cli_test.rs  server_client_integration_test.rs  task_integration_test.rs
ailoop-cli/tests/common/: mod.rs
ailoop-core/: Cargo.toml  README.md
ailoop-core/assets/: ailoop-ui.html
ailoop-core/src/: lib.rs
ailoop-core/src/channel/: isolation.rs  manager.rs  validation.rs
ailoop-core/src/client/: mod.rs  pending_client.rs  task_client.rs
ailoop-core/src/models/: configuration.rs  message.rs  mod.rs  workflow.rs
ailoop-core/src/parser/: cursor.rs  jsonl.rs  mod.rs  opencode.rs
ailoop-core/src/server/: api.rs  broadcast.rs  core.rs  history.rs  mod.rs  queue.rs  server.rs  task_storage.rs
ailoop-core/src/server/providers/: mod.rs  pending_prompt.rs  reply_source.rs  sink.rs  telegram.rs
ailoop-core/src/services/: interaction.rs  logging.rs
ailoop-core/src/terminal/: countdown.rs
ailoop-core/src/transport/: factory.rs  file.rs  websocket.rs
ailoop-core/src/workflow/: approval_manager.rs  bash_executor.rs  circular_buffer.rs  engine.rs  executor.rs  mod.rs  orchestrator.rs  output.rs  output_stream.rs  persistence.rs  validator.rs
ailoop-core/tests/: client_integration_test.rs  parser_test.rs  provider_broadcast_sink_test.rs  provider_pending_prompt_test.rs  task_client_integration_test.rs  transport_file_test.rs  transport_websocket_test.rs  workflow_approval_integration_test.rs  workflow_approval_test.rs  workflow_circular_buffer_test.rs  workflow_conditional_integration_test.rs  workflow_conditional_test.rs  workflow_engine_test.rs  workflow_executor_test.rs  workflow_integration_test.rs  workflow_loading_test.rs  workflow_output_integration_test.rs  workflow_output_stream_test.rs  workflow_parser_test.rs  workflow_retry_integration_test.rs  workflow_retry_test.rs  workflow_validator_test.rs
ailoop-core/tests/common/: mod.rs
ailoop-js/: .eslintrc.js  .gitignore  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
ailoop-js/.codeguardian/: structure.cg.yaml
ailoop-js/src/: client.ts  index.ts  models.ts  types.ts
ailoop-js/tests/: client.http.test.ts  client.websocket.test.ts  models.test.ts  setup.ts  task.test.ts
ailoop-py/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
ailoop-py/.codeguardian/: enforce-project-structure.cg.yaml  prevent-ai-root-files.cg.yaml
ailoop-py/examples/: streaming_agent.py
ailoop-py/src/ailoop/: __init__.py  client.py  exceptions.py  models.py
ailoop-py/tests/: __init__.py  test_client.py  test_models.py  test_tasks.py
ailoop-server/: Cargo.toml  README.md  WIRE.md
ailoop-server/assets/: ailoop-ui.html
ailoop-server/src/: config.rs  error.rs  lib.rs  state.rs
ailoop-server/src/middleware/: auth.rs
ailoop-server/src/server/: api.rs  broadcast.rs  core.rs  history.rs  mod.rs  web.rs
ailoop-server/src/server/providers/: mod.rs  pending_prompt.rs  reply_source.rs  sink.rs  telegram.rs
ailoop-server/tests/: auth_middleware_test.rs  client_integration_test.rs  pending_api_test.rs  provider_broadcast_sink_test.rs  provider_pending_prompt_test.rs  router_oneshot_test.rs  shutdown_drain_test.rs  task_client_integration_test.rs
ailoop-server/tests/common/: mod.rs
docs/: GIT_HOOKS.md  decision-ui-ux-requirements.md
docs/openapi/: ailoop-server.yaml
docs/specs/: authorize-timeout-follows-default.md
examples/web-ui/: README.md  app.js  index.html  styles.css
examples/workflows/: approval-workflow.yaml  complex-branching.yaml  simple-deployment.yaml
k8s/: README.md  configmap.yaml  deployment.yaml  test-job.yaml
schemas/: workflow-schema.json
scripts/: check-versions.sh  install-git-hooks.sh  run-tests.sh  sync-versions.sh
skill/ailoop/: SKILL.md
specs/: ailoop_forward.md
specs/001-ailoop-hitl-tool/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-ailoop-forward/: analysis.md  spec.md  tasks.md
src/: lib.rs  main.rs
src/channel/: isolation.rs  manager.rs  mod.rs  validation.rs
src/cli/: commands.rs  forward.rs  handlers.rs  handlers_types.rs  message_converter.rs  mod.rs
src/mode/: detection.rs
src/models/: authorization.rs  configuration.rs  message.rs  mod.rs
src/parser/: cursor.rs  jsonl.rs  mod.rs
src/server/: api.rs  broadcast.rs  handlers_types.rs  history.rs  mod.rs  queue.rs  server.rs  terminal.rs  terminal_render.rs  websocket.rs
src/services/: interaction.rs  logging.rs  mod.rs
src/transport/: connection.rs  factory.rs  file.rs  mod.rs  websocket.rs
test-app/: index.html
tests/: forward_integration_test.rs
(+57 files in other folders)
