[package]
name = "ailoop"
version = "0.1.2"
edition = "2021"

[dependencies]
# CLI framework
clap = { version = "4.4", features = ["derive"] }

# Async runtime and networking
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Web framework for server
warp = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Terminal UI
crossterm = "0.27"
ratatui = "0.24"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async traits
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
toml = "0.8"

# URL parsing
url = "2.5"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
