[workspace]
members = [
    "ailoop-core",
    "ailoop-server",
    "ailoop-cli"
]
resolver = "2"

[patch."https://github.com/goailoop/ailoop.git"]
ailoop-core = { path = "./ailoop-core" }

# Shared dependencies across workspace
[workspace.dependencies]

# Async runtime and networking
tokio = { version = "1.52", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Web framework for server
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Terminal input handling
crossterm = "0.27"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Async traits
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
toml = "1.1"

# URL parsing
url = "2.5"

# HTTP utilities
bytes = "1.0"

# Testing utilities
tempfile = "3.10"

dashmap = "5.5"
tokio-util = "0.7"
