[package]
name = "ailoop-cli"
version = "0.1.11"
edition = "2021"
description = "Ailoop command-line interface"
license = "MIT OR Apache-2.0"

[[bin]]
name = "ailoop"
path = "src/main.rs"

[dependencies]
# Core library
ailoop-core = { path = "../ailoop-core" }

# CLI-specific dependencies
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = { workspace = true }
url = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }
tokio-tungstenite = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
cargo-insta = "1.35"
