[package]
name = "ailoop-cli"
version = "1.0.14"
edition = "2021"
description = "Ailoop command-line interface"
license = "MIT OR Apache-2.0"

[[bin]]
name = "ailoop"
path = "src/main.rs"

[dependencies]
# Core library
ailoop-core = { path = "../ailoop-core" }
ailoop-server = { path = "../ailoop-server" }

# CLI framework
cli-framework = { git = "https://github.com/aroff/cli-framework", features = ["doctor", "mcp-server", "mcp-install"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# CLI-specific dependencies
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
axum = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = { workspace = true }
url = { workspace = true }
async-trait = { workspace = true }
crossterm = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
