[package]
name = "ailoop-core"
version = "0.1.6"
edition = "2021"
description = "Shared core library for ailoop containing models, server, and channel logic"
license = "MIT OR Apache-2.0"

[lib]
name = "ailoop_core"
path = "src/lib.rs"

[dependencies]
# Shared workspace dependencies
clap = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
warp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
crossterm = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = { workspace = true }
url = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
