[package]
name = "ailoop-core"
version = "1.0.1"
edition = "2021"
description = "Shared core library for ailoop: models, channel, parser, and transport primitives"
license = "MIT OR Apache-2.0"

[lib]
name = "ailoop_core"
path = "src/lib.rs"

[dependencies]
# Shared workspace dependencies
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = { workspace = true }
url = { workspace = true }
bytes = { workspace = true }

dashmap = { workspace = true }

# Telegram Bot API (sendMessage, getUpdates)
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
tempfile = { workspace = true }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
