[package]
name = "ailoop-server"
version = "1.0.0"
edition = "2021"
description = "HTTP/WebSocket server runtime for ailoop"
license = "MIT OR Apache-2.0"

[lib]
name = "ailoop_server"
path = "src/lib.rs"

[dependencies]
ailoop-core = { path = "../ailoop-core" }
tokio = { workspace = true }
futures-util = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
crossterm = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
tempfile = { workspace = true }
tokio-tungstenite = { workspace = true }
